sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:7: error: not found: value ecart
				val v=getValeur(i-ecart)
                                                  ^