sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
	var gap=getNombreValeurs()/2
	while (gap>0) {
		def insertionSort() {
			for (i <- getNombreValeurs()-1 to 1 by -1) {
				val v=getValeur(i-ecart)
				var j=i
				while (j>0 && v<getValeur(j)) {
					copie(j-1,j)
					j-=1
				}
				setValeur(j,v)
			}
		}
	}
}
